2008-06-05  Vadim Kurland  <vadim@vk.crocodile.org>

	* All compilers: all compilers include error and warning messages
	produced during compilation in the generated script. Messages are
	grouped by corresponding section (Policy, NAT, all branches
	etc.). Normally only warnings will be included because compilers
	stop when they encounter an error condition, however if compiler
	is being ran with "-xt" command line option, it does not stop and
	includes error messages in the output as well. This helps catch
	changes that generate warnings but do not translate into
	differences in generated configuration.

2008-06-02  Vadim Kurland  <vadim@vk.crocodile.org>

	* PolicyCompiler_PrintRule.cpp (PrintRule::_printTimeInterval):
	Support for --weekdays parameter in iptables 1.4.0 module "time".
	Per bug #1914371: "iptables 1.4.0"

	* platforms.cpp (list): Added iptables version 1.4.0 to the list.
	Will use it for the "new" time module support. Bug #1914371:
	"iptables 1.4.0"

2008-05-30  Vadim Kurland  <vadim@vk.crocodile.org>

	* pf.cpp (main): Like compiler for iptables, compiler for PF now
	supports multiple rule sets for policy and nat. Each rule set is
	translated into corresponding anchor .conf file. If some rule in
	another rule set references it via action Branch, corresponding
	"anchor" configuration line is generated, but if it is not
	references from any rule, the anchor .conf file is still
	created. Rule sets "Policy" and "NAT" are configured "main" or
	"root" and placed in the main .conf file with the name of the
	firewall object.

2008-05-29  Vadim Kurland  <vadim@vk.crocodile.org>

	* ipt.cpp (main): Compiler for iptables processes all Policy and
	NAT rulesets that firewall object has, regardless of whether they
	are referenced from any rules with action Branch or not. This is a
	change compared to the behavior of 2.1 which processed only those
	branch rule sets that were used in Branch rules. Each rule set